--- a/adoptionRequestsListShelter.html
+++ b/adoptionRequestsListShelter.html
@@ -97,7 +97,7 @@
         <div class="rectangle-background-adoption">
         </div>
         <div class=" formpet d-flex justify-content-center flex-column">
-        <!-- <div class="  d-flex justify-content-center flex-column">
+        <div class="  d-flex justify-content-center flex-column">
             <button type="button" class="collapsible container-fluid d-flex align-items-center justify-content-between">
                 <img src="assets/img/perro_2.jpg" alt="" class="image-pet" style="width:90px;">
                 Gnocchi
@@ -172,14 +172,18 @@
                         veterinario de cabecera?
                     </p>
                     <p>Sí.</p>
-                    <div class="d-flex flex-row justify-content-evenly pb-4">
-                        <button class="button-secondary">Declinar</button>
-                        <button class="button-main">Aceptar</button>
+                    <div class="d-flex flex-wrap justify-content-evenly pb-4">
+                        <form action="">
+                            <input type="submit" value="Declinar"
+                            class="button-secondary">
+                            <input type="submit" value="Aceptar"
+                            class="button-main">
+                        </form>
                     </div>
                 </div>
             </div>
             
-        </div> -->
+        </div>
     </div>
     </main>
 
