--- a/detailPet.html
+++ b/detailPet.html
@@ -66,7 +66,7 @@
             </div>
             <div class="pet-text rectangle-background col-lg-6 col-md-7 col-sm-9 col-12">
                 <div class="detail-top pt-1">
-                    <img src="assets/img/userImage.jpg" alt="" class="pet-image" style="width: 25em;">
+                    <img src="" alt="" class="pet-image" style="width: 25em;">
                 </div>
                 <div class="info-pet d-flex flex-column">
                     <h2 class="pet-name josefinsans-normal-black-30px d-flex justify-content-center pb-3"></h2>
@@ -74,36 +74,33 @@
                         <div class="main-info d-flex flex-wrap justify-content-between px-5 mx-5">
                             <div class="age">
                                 <p class="josefinsans-chetwode-blue-18px">EDAD</p>
-                                <p class="pet-age">8 meses</p>
+                                <p class="pet-age"></p>
                             </div>
                             <div class="size">
                                 <p class="josefinsans-chetwode-blue-18px">TALLA</p>
-                                <p class="pet-size">Mediana</p>
+                                <p class="pet-size"></p>
                             </div>
                             <div class="sex">
                                 <p class="josefinsans-chetwode-blue-18px">SEXO</p>
-                                <p class="pet-gender">Macho</p>
+                                <p class="pet-gender"></p>
                             </div>
                         </div>
                         <div class="secondary-info d-flex flex-column justify-content-between px-5 mx-5">
                             <div>
                                 <p class="josefinsans-chetwode-blue-18px">UBICACIÓN</p>
-                                <p>Coyoacán</p>
+                                <p></p>
                             </div>
                             <div>
                                 <p class="josefinsans-chetwode-blue-18px">DETALLES</p>
-                                <p class="character-pet">Gnocchi es muy juguetón, convive con otros perros. Está ciego
-                                    de un ojo. Esterilizado
-                                    y con
-                                    vacunas al día.</p>
+                                <p class="character-pet"></p>
                             </div>
                             <div>
                                 <p class="josefinsans-chetwode-blue-18px">HISTORIA</p>
-                                <p class="story-pet ">Gnocchi fue rescatado de la calle.</p>
+                                <p class="story-pet "></p>
                             </div>
                             <div>
                                 <p class="josefinsans-chetwode-blue-18px">NECESIDADES ESPECIALES</p>
-                                <p class="special-needs">Espacios amplios.</p>
+                                <p class="special-needs"></p>
                             </div>
                         </div>
                     </div>
