--- a/profileShelter.html
+++ b/profileShelter.html
@@ -41,18 +41,13 @@
         </button>
         <ul class="container-inner-menu">
             <li>
-                <a href="homeShelter.html">
+                <a href="index.html">
                     Inicio
                 </a>
             </li>
             <li>
-                <a href="profileShelterEdit.html">
+                <a href="profileShelter.html">
                     Perfil
-                </a>
-            </li>
-            <li>
-                <a href="adoptionRequestsListShelter.html">
-                    Solicitudes
                 </a>
             </li>
             <li>
