--- a/searchPet.html
+++ b/searchPet.html
@@ -52,7 +52,6 @@
                 </a>
             </li>
             <li>
-                <!-- href="index.html" -->
                 <a id='log-out'>
                     Cerrar sesión
                 </a>
@@ -65,7 +64,7 @@
                 <h2 class="josefinsans-normal-white-30px text-center py-4">Buscar una mascota</h2>
             </div>
         </div>
-        <div class="filter-options d-flex flex-column">
+        <!-- <div class="filter-options d-flex flex-column">
             <div class="d-flex flex-row align-items-center justify-content-center py-4">
                 <button id="toggle-filter"
                     class="button-filter josefinsans-normal-chetwode-blue-16px border-2px-chetwode-blue">
@@ -118,14 +117,14 @@
                     </article>
                 </div>
             </div>
-            <!-- <div class="d-flex flew-row justify-content-center align-items-center">
+            <div class="d-flex flew-row justify-content-center align-items-center">
                 <div class="pet-tag">
                     <p class="text-tag josefinsans-normal-white-16px">Cachorros</p>
                     <img src="assets/svg/delete.svg" alt="" style="height: 1em; width: 1em;">
                 </div>
                     <button class="delete-all">Borrar todos</button>
-            </div> -->
-        </div>
+            </div>
+        </div>  -->
         <div class="search-pet d-flex flex-wrap pt-1">
             <div class="card" style="width: 20rem;">
                 <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
@@ -157,8 +156,6 @@
                 </a>
             </div>
         </div>
-
-
     </main>
 
     <footer text-center>
