Updated nav and footer

--- a/about.html
+++ b/about.html
@@ -31,24 +31,6 @@
         </div>
     </header>
 
-    <nav class="container-menu">
-        <button id="close-menu" class="close-menu">
-            <img src="assets/svg/xcircle.svg" class="menu" alt="" style="width: 2em;">
-        </button>
-        <ul class="container-inner-menu">
-            <li>
-                <a href="signUpUser.html">
-                    Registrarme
-                </a>
-            </li>
-            <li>
-                <a href="logInUser.html">
-                    Ingresar
-                </a>
-            </li>
-        </ul>
-    </nav>
-
     <main>
         <div>
             <h1>
@@ -73,18 +55,18 @@
                     <a href="about.html">Acerca</a>
                 </li>
                 <li>
-                    <a href="">Condiciones de uso</a>
+                    <a href="conditions.html">Condiciones de uso</a>
                 </li>
                 <li>
-                    <a href="">Política de privacidad</a>
+                    <a href="privacy.html">Política de privacidad</a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <a href="">paw.chontli@gmail.com</a>
+                    paw.chontli@gmail.com
                 </li>
                 <li>
-                    <a href="">55-12-32-34-14</a>
+                    55-12-32-34-14
                 </li>
             </ul>
         </div>
