--- a/adoptionForm.html
+++ b/adoptionForm.html
@@ -24,21 +24,39 @@
                 </a>
             </div>
             <div>
-                <button>
+                <button id="toggle-menu">
                     <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
                 </button>
             </div>
         </div>
     </header>
 
+    <nav class="container-menu">
+        <button id="close-menu" class="close-menu">
+            <img src="assets/svg/xcircle.svg" class="menu" alt="" style="width: 2em;">
+        </button>
+        <ul class="container-inner-menu">
+            <li>
+                <a href="profileUserEdit.html">
+                    Perfil
+                </a>
+            </li>
+            <li>
+                <a id='log-out'>
+                    Cerrar sesión
+                </a>
+            </li>
+        </ul>
+    </nav>
+
     <main>
-        <div class="adoption-form">
+        <div class="adoption-form form-base">
             <div class="adoption-top">
                 <div class="close">
                     <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="" style="width: 3em;">
                 </div>
             </div>
-            <div class="col-lg-6 col-md-8 col-sm-10 col-10 adoption-body">
+            <div class="col-12 col-lg-5 col-md-6 col-sm-7 col-xl-5 col-xxl-4 adoption-body">
                 <h1 class="title josefinsans-normal-black-30px text-center">Formulario de <br />adopción</h1>
                 <br>
                 <div class="d-flex justify-content-center align-content-center align-items-center">
@@ -226,18 +244,18 @@
                     <a href="about.html">Acerca</a>
                 </li>
                 <li>
-                    <a href="">Condiciones de uso</a>
+                    <a href="conditions.html">Condiciones de uso</a>
                 </li>
                 <li>
-                    <a href="">Política de privacidad</a>
+                    <a href="privacy.html">Política de privacidad</a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <a href="">paw.chontli@gmail.com</a>
+                    paw.chontli@gmail.com
                 </li>
                 <li>
-                    <a href="">55-12-32-34-14</a>
+                    55-12-32-34-14
                 </li>
             </ul>
         </div>
