--- a/detailPetShelter.html
+++ b/detailPetShelter.html
@@ -25,9 +25,6 @@
                 </a>
             </div>
             <div>
-                <a href="adoptionRequestsListShelter.html">
-                    <img src="assets/svg/clipboard.svg" class="clipboard" alt="" style="width: 2em;">
-                </a>
                 <button id="toggle-menu">
                     <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
                 </button>
@@ -41,28 +38,17 @@
         </button>
         <ul class="container-inner-menu">
             <li>
-                <a href="homeShelter.html">
-                    Inicio
-                </a>
-            </li>
-            <li>
                 <a href="profileShelterEdit.html">
                     Perfil
                 </a>
             </li>
             <li>
-                <a href="adoptionRequestsListShelter.html">
-                    Solicitudes
-                </a>
-            </li>
-            <li>
-                <a href="index.html">
+                <a id='log-out'>
                     Cerrar sesión
                 </a>
             </li>
         </ul>
     </nav>
-
 
     <main>
         <div class="detail-pet d-flex justify-content-center">
@@ -163,22 +149,22 @@
                     <a href="about.html">Acerca</a>
                 </li>
                 <li>
-                    <a href="">Condiciones de uso</a>
+                    <a href="conditions.html">Condiciones de uso</a>
                 </li>
                 <li>
-                    <a href="">Política de privacidad</a>
+                    <a href="privacy.html">Política de privacidad</a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <a href="">paw.chontli@gmail.com</a>
+                    paw.chontli@gmail.com
                 </li>
                 <li>
-                    <a href="">55-12-32-34-14</a>
+                    55-12-32-34-14
                 </li>
             </ul>
         </div>
-
+    
         <div class="icons-footer d-flex justify-content-evenly">
             <a href="https://www.facebook.com/Pawchontli-100149705588791" role="button">
                 <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
