--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
                     <a href="about.html">Acerca</a>
                 </li>
                 <li>
-                    <a href="">Condiciones de uso</a>
+                    <a href="conditions.html">Condiciones de uso</a>
                 </li>
                 <li>
-                    <a href="">Política de privacidad</a>
+                    <a href="privacy.html">Política de privacidad</a>
                 </li>
             </ul>
             <ul>
