--- a/adoptionRequestsListUser.html
+++ b/adoptionRequestsListUser.html
@@ -37,22 +37,12 @@
         </button>
         <ul class="container-inner-menu">
             <li>
-                <a href="index.html">
-                    Inicio
-                </a>
-            </li>
-            <li>
                 <a href="profileUserEdit.html">
                     Perfil
                 </a>
             </li>
             <li>
-                <a href="adoptionRequestsListUser.html">
-                    Solicitudes
-                </a>
-            </li>
-            <li>
-                <a href="index.html">
+                <a id='log-out'>
                     Cerrar sesión
                 </a>
             </li>
@@ -122,18 +112,18 @@
                     <a href="about.html">Acerca</a>
                 </li>
                 <li>
-                    <a href="">Condiciones de uso</a>
+                    <a href="conditions.html">Condiciones de uso</a>
                 </li>
                 <li>
-                    <a href="">Política de privacidad</a>
+                    <a href="privacy.html">Política de privacidad</a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <a href="">paw.chontli@gmail.com</a>
+                    paw.chontli@gmail.com
                 </li>
                 <li>
-                    <a href="">55-12-32-34-14</a>
+                    55-12-32-34-14
                 </li>
             </ul>
         </div>
