--- a/base.html
+++ b/base.html
@@ -16,10 +16,88 @@
 </head>
 
 <body>
-    
-<div>
-    <h1>ola ke ase</h1>
-</div>
+    <header>
+        <div class="nav-bar d-flex flex-row align-items-center justify-content-between px-3">
+            <div>
+                <a href="">
+                    <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="" style="width: 5em;">
+                </a>
+            </div>
+            <div>
+                <button id="toggle-menu">
+                    <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
+                </button>
+            </div>
+        </div>
+    </header>
+
+
+    <nav class="container-menu">
+        <button id="close-menu" class="close-menu">
+            <img src="assets/svg/xcircle.svg" class="menu" alt="" style="width: 2em;">
+        </button>
+        <ul class="container-inner-menu">
+            <li>
+                <a href="">
+                    Perfil
+                </a>
+            </li>
+            <li>
+                <a id='log-out'>
+                    Cerrar sesión
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+<main>
+    <div>ola ke ase</div>
+</main>
+
+<footer text-center>
+    <div class="top-footer">
+        <img onclick="topFunction()" id="myBtn" title="Go to top" src="assets/svg/arrow.svg" alt="" class="arrow">
+    </div>
+    <div class="container text-center">
+        <img src="assets/svg/logowhite.svg" alt="" class="logo-white">
+    </div>
+    <div class="block-footer d-flex flex-wrap pb-4 justify-content-around">
+        <ul>
+            <li>
+                <a href="about.html">Acerca</a>
+            </li>
+            <li>
+                <a href="conditions.html">Condiciones de uso</a>
+            </li>
+            <li>
+                <a href="privacy.html">Política de privacidad</a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                paw.chontli@gmail.com
+            </li>
+            <li>
+                55-12-32-34-14
+            </li>
+        </ul>
+    </div>
+
+    <div class="icons-footer d-flex justify-content-evenly">
+        <a href="https://www.facebook.com/Pawchontli-100149705588791" role="button">
+            <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
+        </a>
+        <a href="https://www.instagram.com/pawchontli/" role="button">
+            <img src="/assets/svg/instagram.svg" alt="" style="height: 2.5em; width: 2.5em;">
+        </a>
+        <a href="https://github.com/xrlie/pawchontli_backend">
+            <img src="/assets/svg/git.svg" alt="" style="height: 3em; width: 3em;">
+        </a>
+    </div>
+    <div class="text-center pb-4">
+        <p class="quicksand-normal-white-10px">© 2021 Todos los derechos reservados.</p>
+    </div>
+</footer>
 
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
