--- a/createPet.html
+++ b/createPet.html
@@ -24,9 +24,6 @@
                 </a>
             </div>
             <div>
-                <a href="adoptionRequestsListShelter.html">
-                    <img src="assets/svg/clipboard.svg" class="clipboard" alt="" style="width: 2em;">
-                </a>
                 <button id="toggle-menu">
                     <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
                 </button>
@@ -40,22 +37,12 @@
         </button>
         <ul class="container-inner-menu">
             <li>
-                <a href="homeShelter.html">
-                    Inicio
-                </a>
-            </li>
-            <li>
                 <a href="profileShelterEdit.html">
                     Perfil
                 </a>
             </li>
             <li>
-                <a href="adoptionRequestsListShelter.html">
-                    Solicitudes
-                </a>
-            </li>
-            <li>
-                <a href="index.html">
+                <a id='log-out'>
                     Cerrar sesión
                 </a>
             </li>
@@ -69,7 +56,7 @@
                     <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="" style="width: 3em;">
                 </div>
             </div>
-            <div class="col-12 col-lg-5 col-md-6 col-sm-7 col-xl-5 col-xxl-3 pet-body">
+            <div class="col-12 col-lg-5 col-md-6 col-sm-7 col-xl-5 col-xxl-4 pet-body">
                 <h1 class="title josefinsans-normal-black-30px text-center py-5">Dar de alta <br />nueva mascota</h1>
                 <div class="d-flex justify-content-center align-content-center align-items-center">
                     <form action="" method="" id="pet-form">
@@ -191,22 +178,22 @@
                     <a href="about.html">Acerca</a>
                 </li>
                 <li>
-                    <a href="">Condiciones de uso</a>
+                    <a href="conditions.html">Condiciones de uso</a>
                 </li>
                 <li>
-                    <a href="">Política de privacidad</a>
+                    <a href="privacy.html">Política de privacidad</a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <a href="">paw.chontli@gmail.com</a>
+                    paw.chontli@gmail.com
                 </li>
                 <li>
-                    <a href="">55-12-32-34-14</a>
+                    55-12-32-34-14
                 </li>
             </ul>
         </div>
-
+    
         <div class="icons-footer d-flex justify-content-evenly">
             <a href="https://www.facebook.com/Pawchontli-100149705588791" role="button">
                 <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
