--- a/favouritePet.html
+++ b/favouritePet.html
@@ -343,42 +343,33 @@
         <div class="block-footer d-flex flex-wrap pb-4 justify-content-around">
             <ul>
                 <li>
-                    <a href="">Acerca</a>
+                    <a href="about.html">Acerca</a>
                 </li>
                 <li>
-                    <a href="">Refugios</a>
+                    <a href="conditions.html">Condiciones de uso</a>
                 </li>
                 <li>
-                    <a href="">Condiciones de uso</a>
-                </li>
-                <li>
-                    <a href="">Política de privacidad</a>
+                    <a href="privacy.html">Política de privacidad</a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <a href="">Partners</a>
+                    paw.chontli@gmail.com
                 </li>
                 <li>
-                    <a href="">Soporte</a>
-                </li>
-                <li>
-                    <a href="">Mapa del sitio</a>
+                    55-12-32-34-14
                 </li>
             </ul>
         </div>
-
+    
         <div class="icons-footer d-flex justify-content-evenly">
-            <a href="" role="button">
+            <a href="https://www.facebook.com/Pawchontli-100149705588791" role="button">
                 <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
             </a>
-            <a href="" role="button">
-                <img src="/assets/svg/twitter.svg" alt="" style="height: 2.5em; width: 2.5em;">
-            </a>
-            <a href="" role="button">
+            <a href="https://www.instagram.com/pawchontli/" role="button">
                 <img src="/assets/svg/instagram.svg" alt="" style="height: 2.5em; width: 2.5em;">
             </a>
-            <a href="">
+            <a href="https://github.com/xrlie/pawchontli_backend">
                 <img src="/assets/svg/git.svg" alt="" style="height: 3em; width: 3em;">
             </a>
         </div>
