--- a/adoptionRequestsListUser.html
+++ b/adoptionRequestsListUser.html
@@ -55,7 +55,7 @@
         </div>
         <div class="rectangle-background-adoption">
         </div>
-        <div class="d-flex justify-content-center flex-column">
+        <div class="formuser d-flex justify-content-center flex-column">
             <button type="button" class="collapsible container-fluid d-flex align-items-center justify-content-between">
                 <img src="assets/img/gato_5.jpg" alt="" class="image-pet" style="width:90px;">
                 Lucy
