--- a/detailPet.html
+++ b/detailPet.html
@@ -108,9 +108,14 @@
                             <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1"
                                 height="1" />
                         </form>
-                        <a href="adoptionForm.html">
+                        <div class=" adoptpet">
+                        <!-- <a href="adoptionForm.html">
                             <button class="button-main">Adoptar</button>
-                        </a>
+                        </a> -->
+
+                        </div>
+                        
+                        
                     </div>
                 </div>
                 <div class="d-flex justify-content-center shelter-button">
