--- a/profileShelterEdit.html
+++ b/profileShelterEdit.html
@@ -59,9 +59,13 @@
                 </div>
                 <div class="info-shelter d-flex flex-column">
                     <h2 class="josefinsans-normal-black-30px d-flex justify-content-center">Refugio San Gregorio</h2>
-                    <a href="updateShelter.html">                    
+                    <div class ="updateassociation">
+                    <!-- <a href="updateShelter.html">                    
                         <img src="assets/svg/edit.svg" alt="" class="edit pb-4"  style="width: 2em;">
-                    </a>
+                    </a> -->
+
+                    </div>
+                    
                     <div class="d-flex flex-column">
                         <div class="main-info d-flex flex-wrap justify-content-between px-5">
                             <div class="location">
