--- a/profileUserEdit.html
+++ b/profileUserEdit.html
@@ -55,38 +55,40 @@
             </div>
             <div class="user-text rectangle-background col-lg-6 col-md-7 col-sm-9 col-12">
                 <div class="detail-top pt-1">
-                    <img src="assets/img/userImage.jpg" alt="" class="user-image" style="width: 15em;">
+                    <img src="" alt="" class="user-image" style="width: 15em;">
                 </div>
                 <div class="info-user d-flex flex-column">
-                    <h2 class="josefinsans-normal-black-30px d-flex justify-content-center pb-3">Victoria Robertson</h2>
-                    <a href="updateUser.html">                    
+                    <h2 class=" user-name josefinsans-normal-black-30px d-flex justify-content-center pb-3"></h2>
+                    <div class= "updateuser">
+                    <!-- <a href="updateUser.html">                    
                         <img src="assets/svg/edit.svg" alt="" class="edit pb-4"  style="width: 2em;">
-                    </a>
+                    </a> -->
+                    </div>
                     <div class="d-flex flex-column">
                         <div class="main-info d-flex flex-wrap justify-content-around px-4">
-                            <div class="age">
+                            <!-- <div class="age">
                                 <p class="josefinsans-chetwode-blue-18px">EDAD</p>
                                 <p>27 años</p>
-                            </div>
+                            </div> -->
                             <div class="ocupation">
                                 <p class="josefinsans-chetwode-blue-18px">OCUPACIÓN</p>
-                                <p>Historiadora del arte</p>
+                                <p class="occupation-user"></p>
                             </div>
                             <div class="location">
                                 <p class="josefinsans-chetwode-blue-18px">UBICACIÓN</p>
-                                <p>Coyoacán, 04000, CDMX.</p>
+                                <p class="location-user"></p>
                             </div>
                         </div>
                         <div class="secondary-info d-flex flex-wrap justify-content-center px-4 px-lg-5">
                             <div>
                                 <p class="josefinsans-chetwode-blue-18px">DETALLES</p>
-                                <p>Soy amante de los animales, busco un gato con quien compartir mi vida.</p>
+                                <p class="story-user"></p>
                             </div>
                         </div>
-                        <div class="user-actions d-inline-flex flex-row justify-content-evenly">
-                            <a href="adoptionRequestsListUser.html">
+                        <div class="formsuser user-actions d-inline-flex flex-row justify-content-evenly">
+                            <!-- <a href="adoptionRequestsListUser.html">
                                 <button class="button-main">Ver solicitudes</button>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
@@ -145,6 +147,7 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
     <script src="js/main.js"></script>
+    <script src="js/profileUserEdit.js"></script>
 
 </body>
 
